{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 58,
  "lineage": "f91ba844-fffd-b4bc-d44c-675ab675649e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:security-group/sg-0c1a19bf67c5a86ca",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c1a19bf67c5a86ca",
            "ingress": [],
            "name": "all_worker_management20251128020328197700000005",
            "name_prefix": "all_worker_management",
            "owner_id": "396608809293",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-214179447",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c1a19bf67c5a86ca",
            "security_group_rule_id": "sgr-0dbb67b9774a1d50e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-1413387486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c1a19bf67c5a86ca",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:security-group/sg-00c6777043a6ccaf5",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00c6777043a6ccaf5",
            "ingress": [],
            "name": "airbyte-C2iSZUNs-cluster-20251128020328979800000008",
            "name_prefix": "airbyte-C2iSZUNs-cluster-",
            "owner_id": "396608809293",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "airbyte-C2iSZUNs-cluster",
              "cluster": "PROD-K8s-cluster"
            },
            "tags_all": {
              "Name": "airbyte-C2iSZUNs-cluster",
              "cluster": "PROD-K8s-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:security-group/sg-06ccf0480d647e54e",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-06ccf0480d647e54e",
            "ingress": [],
            "name": "airbyte-C2iSZUNs-node-20251128020328195100000004",
            "name_prefix": "airbyte-C2iSZUNs-node-",
            "owner_id": "396608809293",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "airbyte-C2iSZUNs-node",
              "cluster": "PROD-K8s-cluster",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "owned"
            },
            "tags_all": {
              "Name": "airbyte-C2iSZUNs-node",
              "cluster": "PROD-K8s-cluster",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1846037269",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00c6777043a6ccaf5",
            "security_group_rule_id": "sgr-0802910c5edf918bb",
            "self": false,
            "source_security_group_id": "sg-06ccf0480d647e54e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1178514289",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-0e7ed4a58f07d8657",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2017726216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-02adfec9802fdf708",
            "self": false,
            "source_security_group_id": "sg-00c6777043a6ccaf5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3635516499",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-08f7d78a854f4a09e",
            "self": false,
            "source_security_group_id": "sg-00c6777043a6ccaf5",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-301200325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-02bab3467cd9b1be4",
            "self": false,
            "source_security_group_id": "sg-00c6777043a6ccaf5",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-45076452",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-05871f120619d6989",
            "self": false,
            "source_security_group_id": "sg-00c6777043a6ccaf5",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1712258095",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-04002c4a17284b50f",
            "self": false,
            "source_security_group_id": "sg-00c6777043a6ccaf5",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1564814715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-022f9f9a050bdbd2a",
            "self": false,
            "source_security_group_id": "sg-00c6777043a6ccaf5",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-54530590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-0977e1d4f61950850",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3165146269",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-0b507ea4c056a195d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-418901874",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06ccf0480d647e54e",
            "security_group_rule_id": "sgr-0a7f123566aa9edef",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:network-acl/acl-09a610df96405d705",
            "default_network_acl_id": "acl-09a610df96405d705",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09a610df96405d705",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "396608809293",
            "subnet_ids": [
              "subnet-00cf493b492a61e52",
              "subnet-02255ac70e15e6637",
              "subnet-0cd37b53721078204",
              "subnet-0fb1598b72608b9ea"
            ],
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:route-table/rtb-04f750c822e600a0d",
            "default_route_table_id": "rtb-04f750c822e600a0d",
            "id": "rtb-04f750c822e600a0d",
            "owner_id": "396608809293",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:security-group/sg-027312ceea88c23a3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-027312ceea88c23a3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "396608809293",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dfd85f567633244",
            "arn": "arn:aws:ec2:ap-south-1:396608809293:elastic-ip/eipalloc-05dfd85f567633244",
            "domain": "vpc",
            "id": "eipalloc-05dfd85f567633244",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-200-52-25.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.52.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "abhi-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:internet-gateway/igw-0390f20d10577c8f1",
            "id": "igw-0390f20d10577c8f1",
            "owner_id": "396608809293",
            "tags": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dfd85f567633244",
            "association_id": "eipassoc-0fda01483ea08da80",
            "connectivity_type": "public",
            "id": "nat-00ff92c2a5a355a31",
            "network_interface_id": "eni-0a16c2115f3977023",
            "private_ip": "10.0.4.117",
            "public_ip": "13.200.52.25",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fb1598b72608b9ea",
            "tags": {
              "Name": "abhi-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-022e4ecee1d98c2a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00ff92c2a5a355a31",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-022e4ecee1d98c2a1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0390f20d10577c8f1",
            "id": "r-rtb-0b796d69f68477b581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b796d69f68477b58",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:route-table/rtb-022e4ecee1d98c2a1",
            "id": "rtb-022e4ecee1d98c2a1",
            "owner_id": "396608809293",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-private",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:route-table/rtb-0b796d69f68477b58",
            "id": "rtb-0b796d69f68477b58",
            "owner_id": "396608809293",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-public",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c52ecedaa0bcb824",
            "route_table_id": "rtb-022e4ecee1d98c2a1",
            "subnet_id": "subnet-00cf493b492a61e52"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6ace7a10dcb4ea6",
            "route_table_id": "rtb-022e4ecee1d98c2a1",
            "subnet_id": "subnet-02255ac70e15e6637"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bbe9492a2000059",
            "route_table_id": "rtb-0b796d69f68477b58",
            "subnet_id": "subnet-0fb1598b72608b9ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03feca6e17df25f15",
            "route_table_id": "rtb-0b796d69f68477b58",
            "subnet_id": "subnet-0cd37b53721078204"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:subnet/subnet-00cf493b492a61e52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cf493b492a61e52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608809293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:subnet/subnet-02255ac70e15e6637",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02255ac70e15e6637",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608809293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:subnet/subnet-0fb1598b72608b9ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb1598b72608b9ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608809293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:subnet/subnet-0cd37b53721078204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd37b53721078204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608809293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a169221f699afa47"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608809293:vpc/vpc-0a169221f699afa47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a610df96405d705",
            "default_route_table_id": "rtb-04f750c822e600a0d",
            "default_security_group_id": "sg-027312ceea88c23a3",
            "dhcp_options_id": "dopt-03c5432fc46fc056c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a169221f699afa47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f750c822e600a0d",
            "owner_id": "396608809293",
            "tags": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/airbyte-C2iSZUNs": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}